[package]
authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
name = "remacs"
description = "a Rust port of Emacs"
homepage = "https://github.com/Wilfred/remacs/"
repository = "https://github.com/Wilfred/remacs/"
license = "GPL-3.0"
version = "0.1.0"
build = "build.rs"

[workspace]
members = ["alloc_unexecmacosx"]

[dependencies]
lazy_static = "0.2.2"
libc = { version = "0.2.17", default-features = false }
alloc_unexecmacosx = { version = "0.1.0", path = "alloc_unexecmacosx" }

[build-dependencies]
libc = "0.2.17"

[lib]
crate-type = ["staticlib"]

# Allow unwinding in functions called from C. See
# https://www.reddit.com/r/rust/comments/565q1f/wrote_a_blogpost_from_my_experiences_the_arduous/d8h053m/
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
# Treat warnings as a build error on Travis.
strict = []
